--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,4 @@
-# Production environment variables
-# Replace with your actual deployed backend URL after deploying to Render/Railway
-VITE_API_URL=https://your-backend-url.onrender.com/api
-VITE_SOCKET_URL=https://your-backend-url.onrender.com
+# Production environment variables for Vercel
+# These will be auto-populated by Vercel during deployment
+VITE_API_URL=/api
+VITE_SOCKET_URL=
