--- a/vercel.json
+++ b/vercel.json
@@ -28,8 +28,8 @@
     }
   ],
   "env": {
-    "MONGODB_URI": "",
-    "JWT_SECRET": "",
+    "MONGODB_URI": "mongodb+srv://Shubhayyadav84:<db_password>@cluster0.buryqn8.mongodb.net/queueless?retryWrites=true&w=majority",
+    "JWT_SECRET": "queueless-super-secret-key-2024-secure-random-string",
     "DEMO_MODE": "true",
     "NODE_ENV": "production"
   }
