--- a/vercel.json
+++ b/vercel.json
@@ -28,7 +28,7 @@
     }
   ],
   "env": {
-    "MONGODB_URI": "mongodb+srv://Shubhayyadav84:<db_password>@cluster0.buryqn8.mongodb.net/queueless?retryWrites=true&w=majority",
+    "MONGODB_URI": "mongodb+srv://Shubhayyadav84:shubhay@2006@cluster0.buryqn8.mongodb.net/queueless?retryWrites=true&w=majority",
     "JWT_SECRET": "queueless-super-secret-key-2024-secure-random-string",
     "DEMO_MODE": "true",
     "NODE_ENV": "production"
