--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,14 @@
   "outputDirectory": "frontend/dist",
   "framework": "vite",
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/backend/server.js" },
-    { "source": "/socket.io/(.*)", "destination": "/backend/server.js" }
+    { "source": "/api/(.*)", "destination": "/api/index.js" },
+    { "source": "/socket.io/(.*)", "destination": "/api/index.js" }
   ],
   "env": {
     "MONGODB_URI": "mongodb+srv://Shubhayyadav84:shubhay@2006@cluster0.buryqn8.mongodb.net/queueless?retryWrites=true&w=majority",
     "JWT_SECRET": "queueless-super-secret-key-2024-secure-random-string",
     "DEMO_MODE": "true",
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "VERCEL": "1"
   }
 }
